<?xml version="1.0"?>
<package format="2">
  <name>queue_controller</name>
  <version>0.0.0</version>
  <description>Package containing queue stabilizing controllers</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etienne.villemure@usherbrooke.ca">Etienne Villemure</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>queue_server</build_depend>
  <build_depend>ros_queue_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>queue_server</build_export_depend>
  <build_export_depend>ros_queue_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>queue_server</exec_depend>
  <exec_depend>ros_queue_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>message_runtime</depend>
  <depend>rosparam_utils</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>ros_boosted_utilities</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
