<?xml version="1.0"?>
<package format="2">
  <name>ros_queue_experiments</name>
  <version>0.0.0</version>
  <description>Contains a simple implementation of a queue stabilizing system with some packages to measure its performances</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etienne.villemure@usherbrooke.ca">Etienne Villemure</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>queue_controller</build_depend>
  <build_depend>queue_server</build_depend>
  <build_depend>ros_queue_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>queue_controller</build_export_depend>
  <build_export_depend>queue_server</build_export_depend>
  <build_export_depend>ros_queue_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>queue_controller</exec_depend>
  <exec_depend>queue_server</exec_depend>
  <exec_depend>ros_queue_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
